--- a/mod.conf
+++ b/mod.conf
@@ -2,4 +2,4 @@ name = pvp_choice
 title = PVP Choice
 description = Enables you to choose weather you want to PVP or not.
 supported_games = *
-optional_depends = mcl_inventory, mcl_damage
+optional_depends = mcl_inventory, mcl_damage,mcl_burning
